# qa-agent

./: .gitignore  .markdownlint.json  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: release.yml  test.yml
docs/: README.md  api-reference.md  architecture.md  development.md  test-categories.md  web-api.md
qa_agent/: __init__.py  __main__.py  agent.py  ai_planner.py  cli.py  config.py  llm_client.py  models.py  plan_cache.py
qa_agent/reporters/: __init__.py  base.py  console.py  json_reporter.py  markdown.py  pdf.py
qa_agent/testers/: __init__.py  accessibility.py  base.py  custom.py  errors.py  forms.py  keyboard.py  mouse.py  wcag_compliance.py
qa_agent/web/: __init__.py  server.py
qa_agent/web/static/: app.js  style.css
qa_agent/web/templates/: base.html  index.html  run.html  session.html  sessions.html
tests/: _cli_exit_helper.py  conftest.py  test_agent.py  test_ai_planner.py  test_cli.py  test_config.py  test_llm_client.py  test_models.py  test_packaging.py  test_plan_cache.py  test_plan_warnings.py  test_reporters.py
tests/fixtures/site/: index.html  login.html  page2.html
tests/fixtures/test-target/: aria-child-wrong-parent.html  aria-hidden-focusable.html  aria-invalid-no-msg.html  aria-label-mismatch.html  aria-missing-required-props.html  aria-reference.html  aria-role-no-name.html  aria-widget-violations.html  arrow-key-no-effect.html  audio-no-transcript.html  broken-anchors.html  broken-images.html  broken-skip-link.html  canvas-no-fallback.html  clickable-div-no-role.html  console-error.html  console-warnings.html  context-menu-no-keyboard.html  css-order-resequence.html  dblclick-no-effect.html  disabled-not-distinct.html  draggable-no-aria.html  duplicate-ids.html  empty-href.html  empty-links.html  error-msg-not-associated.html  focus-outline-suppressed.html  form-inputs-no-label.html  form-missing-label.html  form-no-submit.html  generic-links.html  generic-page-title.html  heading-skip.html  hidden-focusable.html  icon-no-name.html  illogical-tab-order.html  index.html  input-low-border-contrast.html  input-no-validation-ui.html  invalid-aria-role.html  (+35 more)
tests/integration/: test_smoke.py  test_target_coverage.py
tests/testers/: test_accessibility.py  test_base.py  test_custom.py  test_errors.py  test_forms.py  test_keyboard.py  test_mouse.py
tests/web/: test_server.py
